Use highlight js style

--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   "contributes": {
     "markdown.preview": {
       "styles": [
-        "./base.css", "./node_modules/github-markdown-css/github-markdown.css"
+        "./base.css",
+        "./node_modules/highlight.js/styles/github.css",
+        "./node_modules/github-markdown-css/github-markdown.css"
       ]
     },
     "markdownit.plugins": true
   },
   "dependencies": {
-    "github-markdown-css": "^2.4.1"
+    "github-markdown-css": "^2.4.1",
+    "highlight.js": "^9.10.0"
   }
 }
