--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "markdown.preview": {
       "styles": [
         "./base.css",
-        "./node_modules/highlight.js/styles/github.css",
-        "./node_modules/github-markdown-css/github-markdown.css"
+        "./github-markdown.css",
+        "./node_modules/highlight.js/styles/github.css"
       ]
-    },
-    "markdownit.plugins": true
+    }
   },
   "dependencies": {
     "github-markdown-css": "^2.4.1",
     "highlight.js": "^9.10.0"
+  },
+  "scripts": {
+    "update-github-markdown-css": "node ./build/update-github-markdown-css.js"
   }
 }
