--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.4",
   "displayName": "Markdown Preview Github Styling",
   "description": "Changes VS Code's built-in markdown preview to match Github's style",
+  "extensionKind": "ui",
   "keywords": [
     "markdown",
     "markdown style",
@@ -33,7 +34,7 @@
     ]
   },
   "dependencies": {
-    "highlight.js": "^9.12.0"
+    "highlight.js": "^9.13.1"
   },
   "devDependencies": {
     "github-markdown-css": "^2.10.0"
