--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdown-preview-github-styles",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "displayName": "Markdown Preview Github Styling",
   "description": "Changes VS Code's built-in markdown preview to match Github's style",
   "keywords": [
@@ -20,25 +20,53 @@
     "url": "https://github.com/mjbvz/vscode-github-markdown-preview-style/issues"
   },
   "engines": {
-    "vscode": "^1.15.0"
+    "vscode": "^1.41.0"
   },
   "categories": [
     "Other"
   ],
+  "activationEvents": [
+    "onStartupFinished"
+  ],
+  "main": "dist/extension.js",
+  "browser": "dist/extension.js",
   "contributes": {
+    "markdown.markdownItPlugins": true,
     "markdown.previewStyles": [
-      "./base.css",
-      "./github-markdown.css",
-      "./node_modules/highlight.js/styles/github.css"
+      "./dist/base.css",
+      "./dist/github-markdown.css",
+      "./dist/highlight-js.css"
+    ],
+    "configuration": [
+      {
+        "title": "Markdown Preview Github Styling",
+        "properties": {
+          "markdown-preview-github-styles.colorMode": {
+            "type": "string",
+            "enum": [
+              "auto",
+              "system",
+              "light",
+              "dark"
+            ],
+            "enumDescriptions": [
+              "Automatically match the editor color theme.",
+              "Sync to the system/OS color theme.",
+              "Always use the Github site's light theme.",
+              "Always use the Github site's dark theme."
+            ],
+            "default": "auto"
+          }
+        }
+      }
     ]
   },
-  "dependencies": {
-    "highlight.js": "^11.3.0"
-  },
   "devDependencies": {
+    "eslint": "^7.20.0",
     "github-markdown-css": "^5.0.0"
   },
   "scripts": {
+    "vscode:prepublish": "npm run build",
     "build": "node ./build/update-github-markdown-css.js"
   }
 }
