Fix missing activation events

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   ],
   "main": "dist/extension.js",
   "browser": "dist/extension.js",
+  "activationEvents": [],
   "contributes": {
     "markdown.markdownItPlugins": true,
     "markdown.previewStyles": [
