allow using any of github's themes

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,8 @@
         "lib": [
             "es6"
         ],
+        "module": "es2020",
+        "moduleResolution": "nodenext",
         "experimentalDecorators": true
     },
     "exclude": [
