Revert to use .js file extension
This fixes the extension on web

Fixes #103

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "Other"
   ],
   "type": "module",
-  "main": "dist/extension.cjs",
-  "browser": "dist/extension.cjs",
+  "main": "dist/extension.js",
+  "browser": "dist/extension.js",
   "activationEvents": [],
   "contributes": {
     "markdown.markdownItPlugins": true,
