--- a/package.json
+++ b/package.json
@@ -137,6 +137,6 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run build",
-    "build": "node ./build/generate-github-css.js"
+    "build": "node ./build/generate-github-css.mjs"
   }
 }
