Add launch web configuration

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,23 @@
             "type": "extensionHost",
             "request": "launch",
             "runtimeExecutable": "${execPath}",
-            "args": ["--extensionDevelopmentPath=${workspaceRoot}" ],
-            "stopOnEntry": false,
+            "args": [
+                "--extensionDevelopmentPath=${workspaceRoot}"
+            ],
             "sourceMaps": true,
             "preLaunchTask": "build"
-        }
+        },
+        {
+            "name": "Launch Web Extension in VS Code",
+            "type": "extensionHost",
+            "debugWebWorkerHost": true,
+            "request": "launch",
+            "args": [
+                "--extensionDevelopmentPath=${workspaceFolder}",
+                "--extensionDevelopmentKind=web"
+            ],
+            "sourceMaps": true,
+            "preLaunchTask": "build"
+        },
     ]
 }
